Fix GitHub link formatting in ProjectDetail component and add margin to project link for better spacing

--- a/src/sass/components/_projectDetail.scss
+++ b/src/sass/components/_projectDetail.scss
@@ -130,8 +130,8 @@
             justify-content: center;
             gap: 20px;
             flex-wrap: wrap;
-            
             a {
+                margin: 0;;
                 &:hover {
                     transform: scale(1.05);
                 }
